<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alert_transparent_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_logout"
        android:textSize="@dimen/txt_18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/scal_25dp"
        android:text="@string/txt_logout" >

        <com.custom.MyButton
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/scal_12dp"
            android:layout_weight="1"
            android:background="@color/btn_logout_cancel"
            android:padding="@dimen/scal_6dp"
            android:text="@string/btn_cancel"
            android:textColor="@color/btn_email_signin" />

        <com.custom.MyButton
            android:id="@+id/btnLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/scal_12dp"
            android:layout_weight="1"
            android:background="@color/btn_email_signin"
            android:padding="@dimen/scal_6dp"
            android:text="@string/btn_logout"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>