<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_header"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <com.custom.MyTextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/scal_5dp"
            android:background="@color/btn_header_cancel"
            android:padding="@dimen/scal_5dp"
            android:text="@string/btn_cancel"
            android:textColor="@color/white" />

        <com.custom.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_new_user"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_17" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/scal_5dp"
            android:background="@color/btn_header_cancel"
            android:padding="@dimen/scal_5dp"
            android:text="@string/btn_cancel"
            android:textColor="@color/white"
            android:visibility="invisible" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.custom.MyEditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/scal_20dp"
                android:layout_marginRight="@dimen/scal_20dp"
                android:layout_marginTop="@dimen/scal_25dp"
                android:background="@drawable/img_text_field"
                android:hint="@string/hint_firt_name"
                android:inputType="textCapWords"
                android:paddingLeft="@dimen/scal_5dp"
                android:paddingRight="@dimen/scal_5dp"
                android:singleLine="true"
                android:textSize="@dimen/txt_15" />

            <com.custom.MyEditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/scal_20dp"
                android:layout_marginRight="@dimen/scal_20dp"
                android:layout_marginTop="@dimen/scal_15dp"
                android:background="@drawable/img_text_field"
                android:hint="@string/hint_last_name"
                android:inputType="textCapWords"
                android:paddingLeft="@dimen/scal_5dp"
                android:paddingRight="@dimen/scal_5dp"
                android:singleLine="true"
                android:textSize="@dimen/txt_15" />

            <com.custom.MyEditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/scal_20dp"
                android:layout_marginRight="@dimen/scal_20dp"
                android:layout_marginTop="@dimen/scal_15dp"
                android:background="@drawable/img_text_field"
                android:hint="@string/hint_username"
                android:paddingLeft="@dimen/scal_5dp"
                android:paddingRight="@dimen/scal_5dp"
                android:singleLine="true"
                android:textSize="@dimen/txt_15" />

            <com.custom.MyEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/scal_20dp"
                android:layout_marginRight="@dimen/scal_20dp"
                android:layout_marginTop="@dimen/scal_15dp"
                android:background="@drawable/img_text_field"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/scal_5dp"
                android:paddingRight="@dimen/scal_5dp"
                android:singleLine="true"
                android:textSize="@dimen/txt_15" />

            <com.custom.MyEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/scal_20dp"
                android:layout_marginRight="@dimen/scal_20dp"
                android:layout_marginTop="@dimen/scal_15dp"
                android:background="@drawable/img_text_field"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/scal_5dp"
                android:paddingRight="@dimen/scal_5dp"
                android:singleLine="true"
                android:textSize="@dimen/txt_15" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/scal_20dp"
                android:layout_marginRight="@dimen/scal_20dp"
                android:layout_marginTop="@dimen/scal_15dp"
                android:gravity="center" >

                <LinearLayout
                    android:id="@+id/llMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/ivMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/selector_male_female" />

                    <com.custom.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/scal_5dp"
                        android:layout_marginRight="@dimen/scal_10dp"
                        android:text="@string/txt_male"
                        android:textColor="@color/btn_email_signin"
                        android:textSize="@dimen/txt_12" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/scal_15dp"
                    android:layout_marginRight="@dimen/scal_10dp"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/ivFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/selector_male_female" />

                    <com.custom.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/scal_5dp"
                        android:layout_marginRight="@dimen/scal_5dp"
                        android:text="@string/txt_female"
                        android:textColor="@color/btn_email_signin"
                        android:textSize="@dimen/txt_12" />
                </LinearLayout>

                <com.custom.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/scal_5dp"
                    android:layout_marginRight="@dimen/scal_10dp"
                    android:text="@string/txt_optional"
                    android:textColor="@color/btn_email_signin"
                    android:textSize="@dimen/txt_12"
                    android:visibility="gone" />
            </LinearLayout>

            <com.custom.MyButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/scal_15dp"
                android:layout_marginLeft="@dimen/scal_20dp"
                android:layout_marginRight="@dimen/scal_20dp"
                android:layout_marginTop="@dimen/scal_15dp"
                android:background="@color/blue"
                android:padding="@dimen/scal_10dp"
                android:text="@string/btn_login"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_15" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>