<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#33000000"
    android:gravity="center"
    android:orientation="vertical" >

    <!-- <com.custom.MyTextView -->
    <!-- android:layout_width="match_parent" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_marginLeft="@dimen/scal_20dp" -->
    <!-- android:layout_marginRight="@dimen/scal_20dp" -->
    <!-- android:background="@color/blue" -->
    <!-- android:paddingBottom="@dimen/scal_10dp" -->
    <!-- android:paddingTop="@dimen/scal_10dp" -->
    <!-- android:text="@string/txt_forgot_password" -->
    <!-- android:textColor="@color/white" -->
    <!-- android:textSize="@dimen/txt_15" /> -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/scal_15dp"
        android:layout_marginRight="@dimen/scal_15dp"
        android:orientation="vertical" >

        <com.custom.MyEditText
            android:id="@+id/etOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/scal_20dp"
            android:layout_marginRight="@dimen/scal_20dp"
            android:layout_marginTop="@dimen/scal_15dp"
            android:background="@drawable/img_text_field"
            android:hint="@string/hint_old_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/scal_5dp"
            android:paddingRight="@dimen/scal_5dp"
            android:singleLine="true"
            android:textSize="@dimen/txt_15" />

        <com.custom.MyEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/scal_20dp"
            android:layout_marginRight="@dimen/scal_20dp"
            android:layout_marginTop="@dimen/scal_15dp"
            android:background="@drawable/img_text_field"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/scal_5dp"
            android:paddingRight="@dimen/scal_5dp"
            android:singleLine="true"
            android:textSize="@dimen/txt_15" />

        <com.custom.MyEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/scal_20dp"
            android:layout_marginRight="@dimen/scal_20dp"
            android:layout_marginTop="@dimen/scal_15dp"
            android:background="@drawable/img_text_field"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/scal_5dp"
            android:paddingRight="@dimen/scal_5dp"
            android:singleLine="true"
            android:textSize="@dimen/txt_15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/scal_15dp"
            android:layout_marginTop="@dimen/scal_25dp"
            android:orientation="horizontal" >

            <com.custom.MyButton
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/scal_10dp"
                android:layout_weight="1"
                android:background="@color/btn_logout_cancel"
                android:padding="@dimen/scal_4dp"
                android:text="@string/btn_cancel"
                android:textColor="@color/btn_email_signin" />

            <com.custom.MyButton
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/scal_10dp"
                android:layout_weight="1"
                android:background="@color/btn_email_signin"
                android:padding="@dimen/scal_4dp"
                android:text="@string/btn_send"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>