<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/internal_screen_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_header"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <com.custom.MyTextView
            android:id="@+id/tvClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/scal_5dp"
            android:background="@color/btn_header_cancel"
            android:padding="@dimen/scal_5dp"
            android:text="@string/btn_close"
            android:textColor="@color/white"
            android:textSize="@dimen/scal_15dp" />

        <com.custom.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_invite_friend_header"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_17" />

        <com.custom.MyTextView
            android:id="@+id/tvSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/scal_5dp"
            android:background="@color/blue"
            android:padding="@dimen/scal_5dp"
            android:text="@string/btn_send"
            android:textColor="@color/white"
            android:textSize="@dimen/scal_15dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/black_divider" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/user_seat_bg"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/scal_8dp"
        android:paddingTop="@dimen/scal_8dp" >

        <com.custom.MyEditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/scal_30dp"
            android:layout_marginRight="@dimen/scal_30dp"
            android:background="@drawable/search_field"
            android:hint="@string/hint_search"
            android:paddingLeft="@dimen/scal_5dp"
            android:paddingRight="@dimen/scal_5dp"
            android:singleLine="true"
            android:textSize="@dimen/txt_15" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/scal_5dp"
            android:src="@drawable/search_icon" />

        <ImageView
            android:id="@+id/ivCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="@dimen/scal_5dp"
            android:src="@drawable/cancel_search" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <ListView
            android:id="@+id/lvMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:cacheColorHint="@null"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:scrollbars="none" />
    </LinearLayout>

</LinearLayout>